test/Fail/Issue4012UnquotePrivate.err
Issue4012UnquotePrivate.agda:22.8-9: error: [NotInScope]
Not in scope:
  g
  at Issue4012UnquotePrivate.agda:22.8-9
when scope checking g
